[package]
name = "askew_plane"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = [
    "postgres",
    "uuid",
    "serde_json",
    "chrono",
] }
chrono = "0.4.19"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
dotenv = "0.15.0"
uuid = { version = "0.6", features = ["serde", "v4"] }

rocket_sync_db_pools = { version = "0.1.0-rc.1", features = [
    "diesel_postgres_pool",
] }
